# akashic-agent

./: .gitignore  .gitmodules  config.example.toml  findings.md  main.py  progress.md  pyproject.toml  task_plan.md
_handbook/: plugins-tutorial.md
agent/: config.py  config_models.py  subagent.py
bootstrap/: app.py  setup_wizard.py  tools.py  wiring.py
bus/: events.py  internal_events.py
doc_rag/: __init__.py  chunker.py  embedding.py  indexer.py  loader.py  models.py  retriever.py  schema.sql  store.py  trace.py
my_md/: 00-learning-map.md  01-runbook.md  02-architecture.md  03-passive-agent-loop.md  04-memory-tools-plugins.md  05-proactive-agent.md  06-interview-notes.md  07-module-interview-qa.md  08-ordered-learning-outline.md  README.md
proactive_v2/: agent_tick_factory.py  drift_tools.py
scripts/: doc_rag_chunker_check.py  doc_rag_index_check.py  doc_rag_loader_check.py  doc_rag_retrieve_check.py  doc_rag_store_check.py
tests/: test_agent_core_p2_reasoner.py  test_agent_core_p5_agent_core.py  test_agent_core_p6_runner.py  test_agent_core_p7_commit.py  test_bootstrap_logging.py  test_bootstrap_toolsets_p1.py  test_bootstrap_wiring_p2.py  test_channel_clients.py  test_citation_plugin.py  test_doc_rag_chunker.py  test_doc_rag_citation_plugin.py  test_doc_rag_config.py  test_doc_rag_embedding.py  test_doc_rag_indexer.py  test_doc_rag_intent.py  test_doc_rag_intent_preload.py  test_doc_rag_loader.py  test_doc_rag_models.py  test_doc_rag_retriever.py  test_doc_rag_scripts.py  test_doc_rag_store.py  test_doc_rag_store_search.py  test_doc_rag_tools.py  (+78 more)
(+205 files in other folders)
