[project]
name = "akashic-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[dependency-groups]
dev = [
    "rich>=15.0.0",
]

